# readelfobj-code

./: .gitignore  .travis.yml  CODINGSTYLE.md  COPYING  ChangeLog  ChangeLog2019  ChangeLog2022  ChangeLog2024  ChangeLog2025  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  SHALIAS.sh  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
m4/: readobj_compiler.m4
scripts/: FIX-CONFIGURE-TIMES  FIXDATESTRING  UPD.awk  build_access.py  build_all_relocs.sh  dateorder  fixdate.sh  machotype.py  raw_elf_definesdwarf_reloc_386.h  raw_elf_definesdwarf_reloc_aarch64.h  raw_elf_definesdwarf_reloc_arm.h  raw_elf_definesdwarf_reloc_mips.h  raw_elf_definesdwarf_reloc_ppc.h  raw_elf_definesdwarf_reloc_ppc64.h  raw_elf_definesdwarf_reloc_sparc.h  raw_elf_definesdwarf_reloc_x86_64.h
src/: COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  baseline.ltp  common_options.c  common_options.h  dw_elfstructs.h  dwarf_64machoread.c  dwarf_debuglink.c  dwarf_debuglink.h  dwarf_elf_decompress.c  dwarf_elf_decompress.h  dwarf_elf_naming.c  dwarf_elf_reloc_386.c  dwarf_elf_reloc_aarch64.c  dwarf_elf_reloc_arm.c  dwarf_elf_reloc_mips.c  dwarf_elf_reloc_mips.h  dwarf_elf_reloc_ppc.c  dwarf_elf_reloc_ppc.h  dwarf_elf_reloc_ppc64.c  dwarf_elf_reloc_ppc64.h  dwarf_elf_reloc_sparc.c  dwarf_elf_reloc_x86_64.c  dwarf_elf_reloc_x86_64.h  dwarf_load_elf_headers.c  dwarf_macho_loader.h  dwarf_machoread.c  dwarf_machoread.h  dwarf_object_detector.c  dwarf_object_detector.h  dwarf_object_read_common.c  dwarf_object_read_common.h  dwarf_pe_descr.h  dwarf_peread.c  dwarf_peread.h  dwarf_reading.h  (+41 more)
test/: CLEANUP  COPYING  ChangeLog  ChangeLog2018  Makefile.am  Makefile.in  PICKUP  README  comphello  comprelad.x.base  comprelad32.x  comprelad32.x.base  comprelaf.x  comprelaf.x.base  comprelaf32.x.base  comprelal.x  comprelal.x.base  comprelal32.x.base  comprelar.x.base  comprelar32.x  comprelar32.x.base  comprelat.x  comprelat.x.base  comprelat32.x.base  compshstrtab.x.base  compshstrtab32.x  compshstrtab32.x.base  compstrtab.x  compstrtab32.x  compsymtab.x  compsymtab.x.base  compsymtab32.x  compsymtab32.x.base  fuzz_init_path-6557751518560256  hello.x  hello32.x  libdwarf.so.1.0.0  mach-o-object32  runtests.sh  test001.base  (+101 more)
test/elfextended/: README  elfextendedtestcase.c  patcher.sh  testobj.baseobj  testobj.extend  testobj64.baseobj  testobj64.extend  testobj64gnu.extend  testobjgnu.extend
test/kask2/: dwarfdump_G4
test/kask2/dwarfdump_G4.dSYM/Contents/: Info.plist
test/kask2/dwarfdump_G4.dSYM/Contents/Resources/DWARF/: dwarfdump_G4
test/mach-o-object64.dSYM/Contents/Resources/DWARF/: mach-o-object64
