### Copyright (C) David Anderson
### This code is public domain and can be freely used or copied.

ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src test

CLEANFILES = config.h.in~

MAINTAINERCLEANFILES = \
Makefile.in \
aclocal.m4 \
ar-lib \
compile \
config.guess \
config.h.in \
config.h.in~ \
config.sub \
configure \
depcomp \
install-sh \
ltmain.sh \
m4/readobj_compiler.m4 \
m4/libtool.m4 \
m4/ltoptions.m4 \
m4/ltsugar.m4 \
m4/ltversion.m4 \
m4/lt~obsolete.m4 \
missing 

EXTRA_DIST = \
COPYING \
ChangeLog \
ChangeLog2018 \
NEWS \
README

# AUTHORS, ChangeLog and COPYING must be present


