### Copyright (C) David Anderson
### This code is public domain and can be freely used or copied.

ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src test

CLEANFILES = config.h.in~

MAINTAINERCLEANFILES = \
Makefile.in \
aclocal.m4 \
ar-lib \
compile \
config.guess \
config.h.in \
config.h.in~ \
config.sub \
configure \
depcomp \
install-sh \
ltmain.sh \
m4/readobj_compiler.m4 \
m4/libtool.m4 \
m4/ltoptions.m4 \
m4/ltsugar.m4 \
m4/ltversion.m4 \
m4/lt~obsolete.m4 \
missing 

EXTRA_DIST = \
COPYING \
ChangeLog \
ChangeLog2018 \
NEWS \
README \
scripts/build_access.py \
scripts/build_all_relocs.sh \
scripts/dateorder \
scripts/FIX-CONFIGURE-TIMES \
scripts/FIXDATESTRING \
scripts/machotype.py  \
scripts/raw_elf_definesdwarf_reloc_386.h     \
scripts/raw_elf_definesdwarf_reloc_aarch64.h \
scripts/raw_elf_definesdwarf_reloc_arm.h     \
scripts/raw_elf_definesdwarf_reloc_mips.h    \
scripts/raw_elf_definesdwarf_reloc_ppc64.h   \
scripts/raw_elf_definesdwarf_reloc_ppc.h     \
scripts/raw_elf_definesdwarf_reloc_sparc.h   \
scripts/raw_elf_definesdwarf_reloc_x86_64.h  \
scripts/UPD.awk


# AUTHORS, ChangeLog and COPYING must be present

