###Copyright (C) 2018 David Anderson
###This code is public domain and can be freely used or copied.

MAINTAINERCLEANFILES = Makefile.in

CLEANFILES = \
  junk.test001 \
  junk.test001.out \
  junk.test002 \
  junk.test002.out \
  junk.test003 \
  junk.test003.out \
  junk.test004 \
  junk.test004.out \
  junk.test005 \
  junk.test005.out \
  junk.test006 \
  junk.test006.out \
  junk.test007 \
  junk.test007.out \
  junk.test008m \
  junk.test008m.out \
  junk.test009m \
  junk.test009m.out \
  junk.test010 \
  junk.test010.out \
  junk.test011 \
  junk.test011.out \
  junk.test012 \
  junk.test012.out \
  junk.test013m \
  junk.test013m.out \
  junk.test014m \
  junk.test014m.out \
  junk.test015p \
  junk.test015p.out \
  junk.test016p \
  junk.test016p.out \
  object_detector \
  readobjmacho \
  readelfobj


check:
	sh PICKUP
	sh runtests.sh

EXTRA_DIST = \
README  \
CLEANUP  \
PICKUP    \
ChangeLog  \
runtests.sh \
test001.sh  \
test002.sh  \
test003.sh  \
test004.sh  \
test005.sh  \
test006.sh  \
test007.sh  \
test008m.sh \
test009m.sh \
test010.sh  \
test011.sh  \
test012.sh  \
test013m.sh \
test014m.sh \
test015p.sh \
test016p.sh \
test001.base \
test003.base  \
test004.base  \
test005.base  \
test006.base  \
test007.base  \
test008m.base \
test009m.base \
test010.base  \
test011.base  \
test012.base  \
test013m.base \
test014m.base \
test015p.base \
test016p.base \
mach-o-object32 \
mach-o-object32.dSYM \
mach-o-object64	\
mach-o-object64.dSYM \
libexamine-0.dll \
libkrb5support.so.0.1.debug 

