###Copyright (C) 2018 David Anderson
###This code is public domain and can be freely used or copied.

MAINTAINERCLEANFILES = Makefile.in

CLEANFILES = \
  junk.test001 \
  junk.test001.out \
  junk.test002 \
  junk.test002.out \
  junk.test003 \
  junk.test003.out \
  junk.test004 \
  junk.test004.out \
  junk.test005 \
  junk.test005.out \
  junk.test006 \
  junk.test006.out \
  junk.test007 \
  junk.test007.out \
  junk.test008m \
  junk.test008m.out \
  junk.test009m \
  junk.test009m.out \
  junk.test010 \
  junk.test010.out \
  junk.test011 \
  junk.test011.out \
  junk.test012 \
  junk.test012.out \
  junk.test013m \
  junk.test013m.out \
  junk.test014m \
  junk.test014m.out \
  junk.test015p \
  junk.test015p.out \
  junk.test016p \
  junk.test016p.out \
  junk.test017 \
  junk.test017.out \
  junk.test018p \
  junk.test018p.out \
  junk.test019 \
  junk.test019.out \
  junk.test020 \
  junk.test020.out \
  junk.test021 \
  junk.test021.out \
  junk.test023.out \
  junk.test023.out \
  object_detector \
  readobjmacho \
  readobjpe \
  readelfobj


check:
TESTS = ./runtests.sh
AM_TESTS_ENVIRONMENT = DWTOPSRCDIR='$(top_srcdir)'; export DWTOPSRCDIR;

EXTRA_DIST = \
README  \
CLEANUP  \
PICKUP    \
ChangeLog  \
ChangeLog2018  \
runtests.sh \
test001.sh  \
test002.sh  \
test003.sh  \
test004.sh  \
test005.sh  \
test006.sh  \
test007.sh  \
test008m.sh \
test009m.sh \
test010.sh  \
test011.sh  \
test012.sh  \
test013m.sh \
test014m.sh \
test015p.sh \
test016p.sh \
test017.sh \
test018p.sh \
test019.sh \
test020.sh \
test021.sh \
test022.sh \
test023.sh \
test001.base \
test003.base  \
test004.base  \
test005.base  \
test006.base  \
test007.base  \
test008m.base \
test009m.base \
test010.base  \
test011.base  \
test012.base  \
test013m.base \
test014m.base \
test015p.base \
test016p.base \
test017.base \
test018p.base \
test019.base \
test020.base \
test021.base \
test022.base \
test023.base \
dd-irix-n32 \
libkrb5support.so.0.1.debug \
mach-o-object32 \
mach-o-object32.dSYM \
mach-o-object64	\
mach-o-object64.dSYM \
kask2/dwarfdump_G4  \
kask2/dwarfdump_G4.dSYM\
libexamine-0.dll \
kask-dwarfdump_64.exe \
libdwarf.so.1.0.0 \
sparc64-64-tls.o  \
libc.so.6   \
stream.o    \
testarch.a  \
comdatex.example.o \
frame1-frame1.o  

